Fix bug which applies overflow:hidden on page load

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,10 +20,13 @@ html{
 /* end credit */
 
 /* ---------------------------font styling-------------------------------------*/
+
 html body{
     font-family: 'Lato', sans-serif;
     font-size: 1.0625rem;
     color: #263238;
+    overflow-y: scroll;
+    overflow: scroll !important;
 }
  /* h1-h6 */
 h1{
